--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--플러그인-->
     <script type="text/javascript" src="js/jquery.fullpage.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>     
 </head>
 <body>
